# jsonptr-lite

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: ptr.rs
examples/: basic.rs  mutate.rs
src/: lib.rs
tests/: basic.rs
